[project]
name = "langchain-learning"
version = "0.1.0"
description = ""
authors = [
    {name = "Aniruddha150902",email = "aniruddhajaganatha@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "langchain (>=0.3.20,<0.4.0)",
    "langchain-ollama (>=0.2.3,<0.3.0)",
    "firestore (>=0.0.8,<0.0.9)",
    "langchain-google-firestore (>=0.5.0,<0.6.0)",
    "langchain-chroma (>=0.2.2,<0.3.0)",
    "sentence-transformers (>=3.4.1,<4.0.0)",
    "langchain-huggingface (>=0.1.2,<0.2.0)",
    "einops (>=0.8.1,<0.9.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "firecrawl-py (>=1.13.5,<2.0.0)"
]

[tool.poetry]
packages = [{include = "langchain_learning", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
